# GalGui

./: .gitmodules  CMakeLists.txt  GalGui.cpp  GalGui.h  GalGui.sln  GalGui.vcxproj  GalGui.vcxproj.filters  GalGui_Draw.cpp  GalGui_Draw.h  GalGui_Internal_Helper.h  GalGui_Internal_RectPack.h  GalGui_Internal_TrueType.cpp  GalGui_Internal_TrueType.h  ReadMe.md
example/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/internal/: canvas.hpp  circle.hpp  color.hpp  point.hpp  rect.hpp
